# nimbus

./: .gitignore  README.md  SECURITY.md  config.example.yaml  pyproject.toml  setup.sh
.github/workflows/: ci.yml
marketing/: content.py  launch.py  video.py
nimbus/: __init__.py  __main__.py  bot.py  engine.py  security.py  sessions.py  store.py
